--- a/FishTagsApp/app/src/main/res/values/strings.xml
+++ b/FishTagsApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FishTagsApp</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_parse_data">ParseDataActivity</string>
+    <string name="title_activity_parse_file">ParseFileActivity</string>
 </resources>
