--- a/FishTagsApp/app/src/main/res/values/strings.xml
+++ b/FishTagsApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_parse_data">ParseDataActivity</string>
     <string name="title_activity_parse_file">ParseFileActivity</string>
+    <string name="title_activity_camera">Camera</string>
 </resources>
