--- a/FishTagsApp/app/src/main/res/values/strings.xml
+++ b/FishTagsApp/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="saveMessage">Save Message to SD Card</string>
     <string name="readMessage">Read Message From SD Card</string>
     <string name="deleteMessage">Delete Message From SD Card</string>
+    <string name="title_activity_form">FormActivity</string>
+    <string name="title_activity_testing">TestingActivity</string>
 
 </resources>
