--- a/FishTagsApp/app/src/main/res/values/strings.xml
+++ b/FishTagsApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">HI TAG</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
     <string name="title_activity_parse_data">ParseDataActivity</string>
     <string name="title_activity_parse_file">ParseFileActivity</string>
     <string name="title_activity_camera">Camera</string>
