Fixed bug with wrong ID being displayed. Will need to redo the auto-fill in capability because time and location are done behind the scenes. Currently using fragments to create a step by step form with one thing per page. Have not gotten buttons switching between the tabs working yet. Would also want to put some pictures like how to measure fork length in the tabs

--- a/FishTagsApp/app/src/main/res/values/strings.xml
+++ b/FishTagsApp/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="prompt_zip">Zipcode</string>
     <string name="prompt_phone">Phone Number</string>
     <string name="prompt_tagId">Tag ID</string>
+    <string name="prompt_forkLength">Fork Length</string>
     <string name="prompt_time">Time</string>
     <string name="prompt_location">Location</string>
     <string name="prompt_gearUsed">Gear Used</string>
