Transitions between fragments working forward. Switched spinner to radiobuttons. Working on making fork length layout better, need to insert diagrams, and fix the layout of the radio buttons on the species tab. App crashes when you make the phone horizontal instead of vertical, should fix this problem. Going back through the form does not change the progress bar colors and lookes extremely weird. Also might be helpful to have the little icons direct to the fragment although in the actual flow of events would probably not do so

--- a/FishTagsApp/app/src/main/res/values/strings.xml
+++ b/FishTagsApp/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="action_autofill">Autofill</string>
     <string name="action_sign_up">Save</string>
     <string name="action_sign_up_short">Save</string>
-    <string name="action_submit_tag">Submit Tag Report</string>
+    <string name="action_submit_tag">Submit Tag</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
